    {#} global skipped groups will also skip GRPNAME_INT
    {#} !spread not realizing spreading was completed
    {#} Ignore PRE sections for duplicate kb race check, to be able to race own releases
    {#} !addtvinfo showed wrong results for some shows like 'The.New.Frontier' or 'The.Twilight.Zone' (#246)
    {#} Try to complete works again and also supports non-routable sites as sources
    {^} Requests can be filled from sites without checking the routes. (#168)
    {^} All irc commands with * as allowed input for sitename should output stuff in alphabetical order. (#163)
    {^} [MKDIR Denied] msg shows path with denied releasename.
    {^} !autoinvite warns you if no IRCNick is specified for the site.
    {^} !maxupperrip can show actual value now.
    {^} !findaffil has improved irc output.
    {^} backup on startup will only be executed after sites.dat has been successfully decrypted. (#169)
    {^} !leechers code improved.
    {^} Support for regex in IMDb Language rule
    {^} Detection for iOFTPD sites
    {^} IMDb parsing code update due to recent website changes
    {^} taskdirlist shows sitename on 'can not dirlist' announce (#227)
    {^} !indexquery search count is selectable (#188)
    {^} Skip lookup of extra infos for skipped groups (#218)
    {^} Addpre command does not need to contain the section anymore (it was ignored anyway)
    {^} Less flickering of console window at startup on Windows platform
    {^} Send nfo for NFOFIX, SFVFIX, SAMPLEFIX, etc instead of creating only an empty dir
    {^} more reliable maxidle interval handling
    {^} Free and reassign slots faster on completed races of single files
    {^} If available parse complete_tag on requests to determine completion
    {^} Separate spread event to not clash with PRE events like addpre announces
    {^} Allow handling of multiple PRE sections through !setpredir (#182)
    {^} !batch output is less verbose by default (#217)